# mingen

./: .gitignore  Cargo.toml  input-long.md  input-short.md
benches/: md_to_html.rs  my_benchmark.rs
src/: lib.rs  main.rs
src/site/: mod.rs
src/template/: mod.rs
src/theme/: mod.rs
