[package]
name = "mingen"
version = "0.1.0"
authors = ["= <minalear@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minmarkdown = { path = "../minmarkdown" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "md_to_html"
harness = false