[package]
name = "mingen"
version = "0.1.0"
authors = ["= <minalear@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minmarkdown = { path = "../minmarkdown" }
clap = "3.0.0-beta.1"
toml = "0.5.6"
serde = { version = "1.0.114", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "md_to_html"
harness = false